<resources>
    <string name="app_name">Konecta2</string>
    <!--    <string name="tab_1">Mis Eventos</string>-->
    <string name="tab_2">Eventos</string>
    <string name="tab_3">Mi Perfil</string>
    <string name="tab_4">Sondeo STEM</string>
    <string name="event_title">Mis Eventos</string>
    <string name="event_list_title">Eventos Actuales</string>
    <string name="profile">Mi perfil</string>
    <string name="add_event">Evento añadido</string>
    <string name="share_text_event">Se produjo un error, verifica que el evento exista</string>
    <string name="event_image_content_description">Portada/Imagen del evento</string>
    <string name="register_needs_prefix">Debes registrarte</string>
    <string name="message">Mensaje</string>
    <string name="tit_mss">Enviar mensaje a la comunidad organizadora</string>
    <string name="mss_hint">Escribe tu mensaje aqui...</string>
    <string name="mss_send">Mensaje enviado</string>
    <string name="pres_1">¡Hola! Soy Miriam</string>
    <string name="descrip">Tengo 25 años y soy egresada de la carrera Ingeniería de Sistemas de la Universidad La Salle</string>
    <string name="comunidad">Pertenezco a la comunidad GDG Android Bolivia</string>
    <string name="feedback">¡Valóranos ahora!</string>
    <string name="but_fB">Evaluar App</string>
    <string name="dislike">No me gusta</string>
    <string name="love">¡Me encanta!</string>
    <string name="fB_tit">¿Cómo podríamos mejorar la app?</string>
    <string name="fb_desc">Déjanos un comentario</string>
    <string name="fB_close">¡Gracias por tu participación!</string>
    <string name="fB_send">Enviar valoración</string>
    <string name="even1_tit">"Let's talk about IA"</string>
    <string name="even1_dscrp">DevC La Paz: 1er meet 08.04.2020</string>
    <string name="even2_tit">Kotlin Nights vol. 4</string>
    <string name="even2_dscrp">Kotlin for Server Side, 24.04.2020</string>
    <string name="even3_tit">IWD</string>
    <string name="even3_dscrp">International womens day, 25.04.2020</string>
    <string name="even4_tit">IWD Reloaded</string>
    <string name="even4_dscrp">Reloaded International womens day, 16.05.2020</string>
    <string name="even5_tit">Kotlin Nights vol. 5</string>
    <string name="even5_dscrp">Kotlin/JS, 28.05.2020</string>
    <string name="even6_tit">DevC iOS Talks</string>
    <string name="even6_dscrp">DevC La Paz: 2do meet 29.05.2020</string>
    <string name="even7_tit">Kotlin Nights vol. 6</string>
    <string name="even7_dscrp">Kotlin Coroutines 25.06.2020</string>
    <string name="even8_tit">Collaborative Work</string>
    <string name="even8_dscrp">DevC La Paz: 3er meet 30.06.2020</string>
    <string name="sondeo">¡Ayúdanos con tus respuestas!</string>
    <string name="preg1">¿Qué te motivó a elegir la carrera que estudias / quieres estudiar?</string>
    <string name="p1o1">Perfil de egreso y malla curricular</string>
    <string name="p1o2">Campo / Área de trabajo</string>
    <string name="p1o3">No fue primera opción / No me dejan opciones</string>
    <string name="p1o4">Habilidad para matemáticas</string>
    <string name="preg2">¿Quiénes influyen más en la elección de la carrera?</string>
    <string name="p2o1">Padres / Familia</string>
    <string name="p2o2">Amigxs</string>
    <string name="p2o3">Maestrxs / Profesores</string>
    <string name="preg3">¿Dónde quieres trabajar? (En primera instancia o al finalizar tus estudios)</string>
    <string name="p3o1">Para una empresa relacionada a mi carrera</string>
    <string name="p3o2">En mi propia empresa</string>
    <string name="p3o3">Investigación</string>
    <string name="p3o4">Docencia</string>
    <string name="p3o5">Gobierno / Servicio público</string>
    <string name="preg4">¿Tienes un modelo femenino a seguir?</string>
    <string name="p4o1">Familiar</string>
    <string name="p4o2">Amigas / Profesoras / Maestras</string>
    <string name="p4o3">No cercano a mí / No tengo</string>
    <string name="preg5">¿Cuál es tu meta con la carrera?</string>
    <string name="p5o1">Demostrar que puedo</string>
    <string name="p5o2">Aplicar lo aprendido</string>
    <string name="p5o3">Emprender una empresa propia</string>
    <string name="preg6">Nivel de estudios alcanzados</string>
    <string name="p6o1">Estudiante de colegio</string>
    <string name="p6o2">Estudiante de educación superior (instituto o universidad)</string>
    <string name="p6o3">Egresadx / Tituladx de pregrado</string>
    <string name="p6o4">Estudiante de posgrado (diplomado, maestría,doctorado)</string>
    <string name="preg7">Comprendo el conocimiento que imparten mis docentes</string>
    <string name="preg8">Mis compañerxs de clase son más inteligentes que yo</string>
    <string name="preg9">Necesito trabajar para poder estudiar</string>
    <string name="preg10">Muchos miembrxs de mi familia tienen la misma profesión que yo estoy estudiando</string>
    <string name="preg11">Ser cabeza de familia me dificulta estudiar</string>
    <string name="ranking1">Totalmente en desacuerdo</string>
    <string name="ranking2">Totalmente de acuerdo</string>
    <string name="preg12">Dejaré mis estudios por:</string>
    <string name="p12o1">Motivos de salud</string>
    <string name="p12o2">Razones económicas</string>
    <string name="p12o3">Problemas personales / sentimentales / familiares</string>
    <string name="p12o4">Acoso o discriminación de mis docentes o compañerxs de estudios</string>
    <string name="p12o5">La distancia de mi hogar a mi centro de estudios</string>
    <string name="p12o6">No aplica</string>
    <string name="enviarSondeo">Enviar respuestas</string>
</resources>
