<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feedBack_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin"
            android:text="@string/feedback"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin">

            <TextView
                android:id="@+id/dislike_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/tit_padding"
                android:text="@string/dislike" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/love_tView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/tit_padding"
                android:text="@string/love" />

        </LinearLayout>

        <TextView
            android:id="@+id/comentario_tView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/tit_padding"
            android:paddingTop="@dimen/fab_margin"
            android:text="@string/fB_tit" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indicator_height"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/appbar_padding"
            app:layout_constraintTop_toBottomOf="@+id/comentario_tView" />

        <TextView
            android:id="@+id/opinion_tView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/fragment_padding"
            android:text="@string/fb_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_editor_absoluteY="500dp" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indicator_height"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/appbar_padding"
            app:layout_constraintTop_toBottomOf="@+id/opinion_tView" />

        <TextView
            android:id="@+id/enviarVal_tView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:paddingTop="@dimen/appbar_padding"
            android:text="@string/fB_send"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/feedBack_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_feedback" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>